[gd_scene load_steps=34 format=3 uid="uid://crbxxvwmyvl4o"]

[ext_resource type="Texture2D" uid="uid://pd83uvov45j" path="res://Assets/characters/slime.png" id="1_bmysr"]
[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_sp5ya"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oap1u"]
atlas = ExtResource("1_bmysr")
region = Rect2(0, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0el8g"]
atlas = ExtResource("1_bmysr")
region = Rect2(32, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5adx"]
atlas = ExtResource("1_bmysr")
region = Rect2(64, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_icol7"]
atlas = ExtResource("1_bmysr")
region = Rect2(96, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x28ph"]
atlas = ExtResource("1_bmysr")
region = Rect2(128, 384, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sel1a"]
atlas = ExtResource("1_bmysr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6kh6"]
atlas = ExtResource("1_bmysr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pkh1c"]
atlas = ExtResource("1_bmysr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4vx2"]
atlas = ExtResource("1_bmysr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qleg6"]
atlas = ExtResource("1_bmysr")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_at7kl"]
atlas = ExtResource("1_bmysr")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wcqu"]
atlas = ExtResource("1_bmysr")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih3oj"]
atlas = ExtResource("1_bmysr")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoedk"]
atlas = ExtResource("1_bmysr")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqlxd"]
atlas = ExtResource("1_bmysr")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x14ki"]
atlas = ExtResource("1_bmysr")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lwkft"]
atlas = ExtResource("1_bmysr")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t76cd"]
atlas = ExtResource("1_bmysr")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kaat"]
atlas = ExtResource("1_bmysr")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x84gw"]
atlas = ExtResource("1_bmysr")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dugpc"]
atlas = ExtResource("1_bmysr")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t62wf"]
atlas = ExtResource("1_bmysr")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvolp"]
atlas = ExtResource("1_bmysr")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvsc6"]
atlas = ExtResource("1_bmysr")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5rre"]
atlas = ExtResource("1_bmysr")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii3sk"]
atlas = ExtResource("1_bmysr")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux11t"]
atlas = ExtResource("1_bmysr")
region = Rect2(160, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wlk5t"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oap1u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0el8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5adx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icol7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x28ph")
}],
"loop": true,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sel1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6kh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pkh1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4vx2")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qleg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at7kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wcqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih3oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoedk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqlxd")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x14ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lwkft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t76cd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kaat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x84gw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dugpc")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t62wf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvolp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvsc6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5rre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii3sk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux11t")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3ot8d"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_oo4ip"]
radius = 57.8705

[sub_resource type="CircleShape2D" id="CircleShape2D_vbiyb"]
radius = 13.0384

[node name="slime" type="CharacterBody2D"]
script = ExtResource("1_sp5ya")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6)
sprite_frames = SubResource("SpriteFrames_wlk5t")
animation = &"walk_down"
autoplay = "idle"
frame_progress = 0.831713

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_3ot8d")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_oo4ip")

[node name="Enemy_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy_hitbox"]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_vbiyb")

[node name="take_damage_cooldown" type="Timer" parent="."]
wait_time = 0.4

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="Enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
